fix static